--- a/html/projects.html
+++ b/html/projects.html
@@ -19,7 +19,7 @@
 			</ul>
 			<p>Check out the rollercoaster in action:</p>
 			<div id= "video">
-				<video src = "websiterollercoaster.mp4" width= "350" height= "200" controls> Video Not Supported </video>
+				<video src = "https://www.youtube.com/watch?v=7cgTj2vSqS0" width= "350" height= "200" controls> Video Not Supported </video>
 			</div>
 		</div>
 	</header>
