--- a/html/blog.html
+++ b/html/blog.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<nav>
-			<a href="main.html">Back</a>
+			<a href="index.html">Back</a>
 		</nav>
 		<div class="blog">
 			<h1>blog</h1>
