--- a/html/projects.html
+++ b/html/projects.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<nav>
-			<a href="main.html">Back</a>
+			<a href="index.html">Back</a>
 		</nav>
 		<div class="projects">
 			<h1>projects</h1>
