--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<div id="links">
 				<nav>
 					<div class="sections">
-					<a href= "about.html">about</a>
-					<a href= "projects.html"> projects</a>
-					<a href= "blog.html"> blog</a>
+					<a href= "html/about.html">about</a>
+					<a href= "html/projects.html"> projects</a>
+					<a href= "html/blog.html"> blog</a>
 					</div>
 				</nav>
 				<ul>
