--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<ul>
 					<div id= "mail"><li><a href="mailto:volpattijohn@gmail.com"><i class="fas fa-envelope"></i></a></li></div>
 					<div id= "github"><li><a href="https://github.com/johnvolpatti"><i class="fab fa-github"></i></a></li></div>
-					<div id= "linkedin"><li><a href="google.ca"><i class="fab fa-linkedin"></i></a></li></div>
+					<div id= "linkedin"><li><a href="https://www.linkedin.com/in/john-volpatti-17b39615a/"><i class="fab fa-linkedin"></i></a></li></div>
 				</ul>
 			</div>
 		</div>
