--- a/html/projects.html
+++ b/html/projects.html
@@ -18,7 +18,7 @@
 				<li>Programming various components such as motors, IR sensors, etc with Arduino. <br><br></li>
 			</ul>
 			<div id= "video">
-				<p><a href = "https://www.youtube.com/watch?v=7cgTj2vSqS0"> Check out the rollercoaster in action: </a></p>
+				<p><a href = "https://www.youtube.com/watch?v=7cgTj2vSqS0"> Check out the rollercoaster in action. </a></p>
 			</div>
 			<!--<div id= "video">
 				<video src = "https://youtu.be/7cgTj2vSqS0" width= "350" height= "200" controls> Video Not Supported </video>
