--- a/html/projects.html
+++ b/html/projects.html
@@ -17,7 +17,9 @@
 				<li>For school, my two groupmates and I built a marble rollercoaster made out of copper. <br><br></li>
 				<li>Programming various components such as motors, IR sensors, etc with Arduino. <br><br></li>
 			</ul>
-			<p><a href = "https://www.youtube.com/watch?v=7cgTj2vSqS0"> Check out the rollercoaster in action. </a></p>
+			<div class= "video">
+				<p><a href = "https://www.youtube.com/watch?v=7cgTj2vSqS0"> Check out the rollercoaster in action. </a></p>
+			</div>
 			<!--<div id= "video">
 				<video src = "https://youtu.be/7cgTj2vSqS0" width= "350" height= "200" controls> Video Not Supported </video>
 			</div>-->
